[package]
name = "hdlbr"
description = "Handlebars CLI (Templating by command-line)"
version = "0.1.1"
authors = ["Jerome Arzel <jerome@quitoque.fr>"]
license = "MIT"
repository = "https://github.com/quitoque/hdlbr"
readme = "README.md"
categories = ["templating", "handlebars", "web"]
edition = "2018"

[dependencies]
clap = "2.33"
serde = "1.0"
serde_json = "1.0.39"
handlebars = "1.1.0"
